prometheus-operator/ingress-kube-state-metrics.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: kube-state-metrics
  namespace: monitor
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /metrics
spec:
  ingressClassName: nginx-internal
  rules:
  - host: <host for kube-state-metrics>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-operator-kube-state-metrics
            port: 
              number: 8080
